@@ -214,7 +214,9 @@ reg_entry;
 #define REGNAM_EAX 41
 
 extern const reg_entry i386_regtab[];
+extern const unsigned int i386_regtab_size;
 extern const reg_entry i386_float_regtab[];
+extern const unsigned int i386_float_regtab_size;
 
 typedef struct
 {
