@@ -1,3 +1,10 @@
+2007-03-15  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* config/tc-i386.c (md_begin): Use i386_regtab_size to scan 
+	i386_regtab.
+	(parse_register): Use i386_regtab_size instead of ARRAY_SIZE
+	on i386_regtab.
+
 2007-03-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	PR gas/4184
